--- a/src/main/resources/templates/air-quality-list.html
+++ b/src/main/resources/templates/air-quality-list.html
@@ -12,10 +12,12 @@
 <div class="container">
     <h1>Air Quality for <span th:text="${cityName}"></span></h1>
 
-    <!-- Przycisk pobierania danych -->
+
     <button id="exportButton" class="btn btn-primary">Download as PDF</button>
 
-    <!-- Tabela do wyświetlania danych o jakości powietrza -->
+    <a href="/air" class="btn btn-secondary">Back to Home</a>
+
+
     <table id="table" class="table table-bordered">
         <thead>
         <tr>
