--- a/src/main/resources/templates/filter-form.html
+++ b/src/main/resources/templates/filter-form.html
@@ -36,6 +36,8 @@
 
         <button type="submit" class="btn btn-primary">Pobierz dane</button>
 
+        <a href="/air" class="btn btn-secondary">Back to Home</a>
+
         <div id="validationMessage" class="mt-3" style="color: red;"></div>
 
     </form>
