--- a/src/main/resources/templates/add-new-data.html
+++ b/src/main/resources/templates/add-new-data.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
-  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
   <title>Add New Air Quality Data</title>
 </head>
 <body>
@@ -21,6 +20,7 @@
       <input type="text" class="form-control" id="cityName" name="cityName" required>
     </div>
     <button type="submit" class="btn btn-primary">Add Air Quality Data</button>
+    <a href="/air" class="btn btn-secondary">Back to Home</a>
   </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
