--- a/src/main/resources/templates/city-list.html
+++ b/src/main/resources/templates/city-list.html
@@ -26,6 +26,8 @@
 
     <button type="submit" class="btn btn-primary">Get data</button>
 
+    <a href="/air" class="btn btn-secondary">Back to Home</a>
+
   </form>
 </div>
 
