--- a/src/main/resources/templates/filter-form.html
+++ b/src/main/resources/templates/filter-form.html
@@ -34,7 +34,7 @@
             <input type="date" class="form-control" name="endDate" id="endDate" min="" max="">
         </div>
 
-        <button type="submit" class="btn btn-primary">Pobierz dane</button>
+        <button type="submit" class="btn btn-primary">Get data</button>
 
         <a href="/air" class="btn btn-secondary">Back to Home</a>
 
